# SEM-8

GENAI LAB/: COMPLETE_VIVA_GUIDE.docx  COMPLETE_VIVA_GUIDE.md  DCGAN.ipynb  VannilaGAN.py  vannilaGAN.ipynb
GRL/: README.md  astgcn.py  code_samples.md  paper.txt  requirements.txt  train_astgcn_mock.py
MHO LAB/: ACO.ipynb  hf at.py  program 1 part 2.py  program 1.ipynb  program 1.py  program 10 Continuous GA.ipynb  program 11 Class-Weighted GA cwk-NN.ipynb  program 12 HBMO FLANN and TSP.ipynb  program 2.ipynb  (+10 more)
MHO LAB/research/: MANIFEST.in  OCA_Detailed_Notes.md  OCA_Presentation.pptx  OCA_Presentation_MARP.md  OCA_Research_Paper.md  README.md  Research_Paper_Autonomous_Navigation_MHO.docx  Research_Paper_Autonomous_Navigation_MHO.md  baselines.py  benchmarks.py  cifar10_benchmark.py  digital_twin_bench.py  hpobench_benchmark.py  oca.py  pathfinding_benchmark.py  pyproject.toml  test_oca_install.py  test_oca_rastrigin.py  test_oca_rastrigin_benchmark.py  tsp_benchmark.py
MHO LAB/research/examples/: assignment_hybrid_oca_benchmark.py  baselines.py  bbob_benchmark.py  constrained_pathfinding.py  nasBench_official.py  pathfinding_analysis.py  pathfinding_benchmark.py  simple_benchmark.py  tsp_benchmark.py  unified_benchmark_dashboard.py
MHO LAB/research/pypi/: LICENSE  MANIFEST.in  README.md  pyproject.toml
MHO LAB/research/pypi/examples/: comprehensive_benchmark.py  digital_twin_bench.py  dynamicshift_bench.py  main.py  nas_benchmark.py  pathfinding_benchmark.py
MHO LAB/research/pypi/src/oca/: __init__.py
MHO LAB/research/src/oca/: algorithm.py
(+177 files in other folders)
