[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oca-optimizer"
version = "0.1.2"
description = "Overclocking Algorithm (OCA) metaheuristic optimizer."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Vishnu V", email = "vishnu17o7@protonmail.com" }]
license = { text = "GPL-3.0-only" }
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
]
dependencies = ["numpy>=1.21"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
